--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,19 @@
   pointer-events: none;
 }
 
+.priority-high {
+  color: red;
+}
+
+.priority-medium {
+  color: orange;
+}
+
+.priority-low {
+  color: green;
+}
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
